Fix playing bug and increase readability of progress bar

--- a/www/static/css/index.css
+++ b/www/static/css/index.css
@@ -214,13 +214,14 @@ header .logo {
   width: 100%;
   height: 20px;
   border-radius: 10px;
+  background-color: rgb(200,200,200);
   overflow: hidden;
   position: relative;
   border: 1px solid #ddd;
 }
 .progress-bar .name, .progress-bar .bar {
   position: absolute;
-  text-shadow: 0px 0px 3px rgba(0,0,0,.3);
+  text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
   top: 0;
   left: 0;
   width: 100%;
